syntax = "proto3";

package com.virtuslab.vss.proto;

message HashPasswordMessage {
  string hashType = 1;
  string password = 2;
}

message HashedPasswordMessage {
  string hashType = 1;
  string password = 2;
  string hash = 3;
}

service HashPasswordService {
  rpc HashPassword (HashPasswordMessage) returns (HashedPasswordMessage) {}
}

message CheckPasswordMessage {
  string password = 1;
}

message CheckedPasswordMessage {
  bool pwned = 1;
}

service CheckPasswordService {
  rpc CheckPassword (CheckPasswordMessage) returns (CheckedPasswordMessage) {}
}
